basic Flipside skin

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,9 @@
   "name": "Near Social",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "favicon.ico",
       "sizes": "1024x1024",
-      "type": "image/png"
+      "type": "image/x-icon"
     }
   ],
   "start_url": ".",
